@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2024 Ritense BV, the Netherlands.
+ * Copyright 2015-2021 Ritense BV, the Netherlands.
  *
  * Licensed under EUPL, Version 1.2 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,43 +16,21 @@
 
 package com.ritense.valtimo.contract.database;
 
-import static com.ritense.valtimo.contract.database.ExpressionHelper.cast;
-
-import jakarta.persistence.criteria.CriteriaBuilder;
-import jakarta.persistence.criteria.Expression;
-import jakarta.persistence.criteria.Path;
-import jakarta.persistence.criteria.Predicate;
-import java.time.temporal.TemporalAccessor;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
+import javax.persistence.criteria.CriteriaBuilder;
+import javax.persistence.criteria.Expression;
+import javax.persistence.criteria.Path;
+import javax.persistence.criteria.Predicate;
 
 public class PostgresQueryDialectHelper implements QueryDialectHelper {
 
-    private static final String LOWER_CASE_FUNCTION = "lower";
+    private static final String LOWER_CASE_FUNTION = "lower";
 
     @Override
-    public <T> Expression<T> getJsonValueExpression(CriteriaBuilder cb, Path column, String jsonPath, Class<T> type) {
-        var jsonValue = cb.function(
-            "jsonb_path_query_first",
-            Object.class,
-            column,
-            cb.function("jsonpath", String.class, cb.literal(jsonPath))
-        );
-        if (String.class.isAssignableFrom(type)) {
-            return cast(cb.trim('"', cast(jsonValue, String.class)), type);
-        } else if (TemporalAccessor.class.isAssignableFrom(type)) {
-            var stringValue = cast(jsonValue, String.class);
-            return cb.selectCase()
-                .when(cb.or(cb.equal(stringValue, "null"), cb.equal(stringValue, "\"\"")), cb.nullLiteral(type))
-                .otherwise(cast(cb.trim('"', stringValue), type))
-                .as(type);
-        } else if (Collection.class.isAssignableFrom(type)) {
-            throw new UnsupportedOperationException("Failed to query '" + jsonPath + "'. Unsupported type '" + type + "'.");
-        } else {
-            return cast(jsonValue, type);
-        }
+    public Expression<?> getJsonValueExpression(CriteriaBuilder cb, Path column, String path) {
+        return getValueForPath(cb, column, path);
     }
 
     @Override
@@ -65,7 +43,7 @@ public class PostgresQueryDialectHelper implements QueryDialectHelper {
                 cb.function(
                     "jsonpath",
                     String.class,
-                    cb.literal("$.** ? (@ like_regex \"" + value + "\")")
+                    cb.literal("$.** ? (@ like_regex \""+ value +"\")")
                 )
             )
         );
@@ -75,39 +53,17 @@ public class PostgresQueryDialectHelper implements QueryDialectHelper {
     public Predicate getJsonValueExistsInPathExpression(CriteriaBuilder cb, Path column, String path, String value) {
         return cb.like(
             cb.function(
-                LOWER_CASE_FUNCTION,
+                LOWER_CASE_FUNTION,
                 String.class,
-                getValueForPathText(cb, column, path)
-            ),
-            "%" + value.toLowerCase() + "%"
-        );
-    }
-
-    @Override
-    public Predicate getJsonArrayContainsExpression(CriteriaBuilder cb, Path column, String path, String value) {
-        return cb.isTrue(
-            cb.function(
-                "jsonb_contains_filter",
-                Boolean.class,
-                cb.function(
-                    "jsonb_path_query_first",
-                    Object.class,
-                    column,
-                    cb.function("jsonpath", String.class, cb.literal(path))
-                ),
-                cb.literal(value)
+                getValueForPath(cb, column, path)
             )
+            , "%" + value.toLowerCase() + "%"
         );
     }
 
-    @Override
-    public Expression<String> uuidToString(CriteriaBuilder cb, Path<UUID> column) {
-        return cast(column, String.class);
-    }
-
-    private Expression<String> getValueForPathText(CriteriaBuilder cb, Path column, String path) {
-        List<Expression<String>> pathParts = splitPath(path).stream().map(cb::literal).toList();
-        Expression[] expressions = new Expression[pathParts.size() + 1];
+    private Expression<String> getValueForPath(CriteriaBuilder cb, Path column, String path) {
+        List<Expression<String>> pathParts = splitPath(path).stream().map(cb::literal).collect(Collectors.toList());
+        Expression[] expressions = new Expression[pathParts.size()+1];
         expressions[0] = column;
         System.arraycopy(pathParts.toArray(), 0, expressions, 1, pathParts.size());
 
